[package]
name = "mtpng"
version = "0.4.0"
authors = ["Brion Vibber <brion@pobox.com>", "Daniel Santana <danielgsantana@gmail.com>"]
license = "MIT"
description = "Multithreaded PNG encoder library"
readme = "readme.md"
homepage = "https://github.com/brion/mtpng"
repository = "https://github.com/brion/mtpng.git"
keywords = ["png", "multithreaded", "threaded", "parallel"]
categories = ["multimedia::images"]
edition = "2021"

[features]
default=["miniz"]
capi=["libc"]
zlib = ["libz-sys"]
miniz = ["miniz_oxide", "simd-adler32"]

[dependencies]
rayon = "1.5.1"
crc = "2.1.0"
libz-sys = { version = "1.1.3", optional = true}
itertools = "0.10.1"
miniz_oxide = { version = "0.4.4", optional = true }
simd-adler32 = { version = "0.3.4", optional = true }
typenum = "1.14.0"

# for cli
# for capi
libc = { version = "0.2.106", optional = true }

[dev-dependencies]
clap = "2.33.3"
png = "0.17.2"
rand = "0.8.4"
time = "0.3.4"
walkdir = "2.3.2"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
## Unoptimized debug builds are too slow to profile!
## Having debug info doesn't hurt perf but does increase
## size, so enable this if needed.
# debug = true
